--- a/client/index.html
+++ b/client/index.html
@@ -4,15 +4,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Webpack React</title>
-
-    <link rel="stylesheet" href="bundle.css">
+    <title>MERN</title>
 </head>
 
 <body>
     <div id="app"></div>
-
-    <script src="bundle.js"></script>
 </body>
 
 </html>
